# jhall17.github.io

./: .gitignore  index.html  package.json  pnpm-lock.yaml  scichart2d.wasm
assets/: wasm_bg-128cc936.wasm  wasm_bg-d6502b77.wasm  wasm_bg-fed68ca1.wasm
react/: .eslintrc.cjs  package.json  pnpm-lock.yaml  vite.config.ts
react/src/: App.tsx  main.tsx
react/src/data/alvinHelpers/: csvToJson.js  extractFourSignals.js  extractMaxVoltageForLineGraph.js  fullJsonToMonthJson.js  monthJsonToDayJson.js
react/src/implementations/: apexcharts.tsx  benchmark.tsx  chartjs.tsx  observableplot.tsx  perspective.tsx  plotters-wasm.tsx  scichart.tsx
react/src/pages/: Base.tsx  Benchmark.tsx  Summary.tsx
src/: App.tsx
src/data/: contour.json  heatmap.json  joyplot.json  line1.json  line2.json  sankey.json  stackedBar.json
src/data/alvinHelpers/: csvToJson.js  dayJsonToHourJson.js  extractMaxVoltageForLineGraph.js  fullJsonToMonthJson.js
src/implementations/: apexcharts.tsx  benchmark.tsx  c3js.tsx  chartist.tsx  chartjs.tsx  highcharts.tsx  observableplot.tsx  plotly.tsx  template.tsx  visx.tsx
src/pages/: Base.tsx  Benchmark.tsx  Summary.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
