[package]
name = "wasm"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.19"
plotters = "0.3.5"
plotters-canvas = "0.3.0"
serde = { version = "1.0.164", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen="0.2"

